crates/spectrum-theme/tests/ui/invalid_schema.stderr
error: TOML parse error at line 3, column 1
         |
       3 | unexpected = true
         | ^^^^^^^^^^
       unknown field `unexpected`, expected one of `name`, `author`, `mode`, `version`, `description`

 --> tests/ui/invalid_schema.rs:5:14
  |
5 |     source = "invalid_schema.toml";
  |              ^^^^^^^^^^^^^^^^^^^^^
